# demodish

./: .pre-commit-config.yaml  README.md  flake.nix  manage.py  pyproject.toml
demodish/: asgi.py  settings.py  urls.py  wsgi.py
social_recipes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
social_recipes/migrations/: 0001_initial.py  0002_use_order_with_respect_to.py
social_recipes/templates/social_recipes/: explore.html  profile.html  recipe_detail.html  recipe_form.html  timeline.html
social_recipes/utils/: forms.py
theme/templates/: base.html
