[tool.poetry]
name = "demodish"
version = "0.1.0"
description = "Where Cooks Meet"
authors = ["Julien Hémono <j@jhemono.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
