[tool.poetry]
name = "demodish"
version = "0.1.0"
description = "Where Cooks Meet"
authors = ["Julien Hémono <j@jhemono.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.8"
pillow = "^10.4.0"
django-tailwind = "^3.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
